[package]
name = "mqtt-client-cli"
version = "0.2.0"
edition = "2021"
authors = ["Ming Chang <mail@mingchang.tw>"]
description = "mqtt-client-cli - A CLI MQTT Client"
repository = "https://github.com/ming900518/mqtt-client-cli"
keywords = ["cli", "mqtt"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
paho-mqtt = { version = "0.12.1", default-features = false, features = ["bundled"] }
tokio = { version = "1.27.0", features = ["full"] }
futures-util = "0.3.28"
serde = { version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
axum = { version = "0.6.12", features = ["query"]}
mimalloc = "0.1.36"
clap = { version = "4.2.1", features = ["derive"]}
colored = "2.0.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

