[package]
name = "mqtt-client-cli"
version = "0.2.0"
edition = "2021"
authors = ["Ming Chang <mail@mingchang.tw>"]
description = "mqtt-client-cli - A CLI MQTT Client"
repository = "https://github.com/ming900518/mqtt-client-cli"
keywords = ["cli", "mqtt"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
paho-mqtt = { version = "0.12.5" }
tokio = { version = "1.38.0", features = ["full"] }
futures-util = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
axum = { version = "0.7.5", features = ["query"] }
mimalloc = "0.1.42"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"

[profile.release]
strip = true
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
module_name_repetitions = "allow"
similar_names = "allow"
items_after_statements = "allow"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
