[package]
name = "mqtt-client-cli"
version = "0.4.0"
edition = "2021"
authors = ["Ming Chang <mail@mingchang.tw>"]
description = "mqtt-client-cli - A CLI MQTT Client"
repository = "https://github.com/ming900518/mqtt-client-cli"
keywords = ["cli", "mqtt"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
paho-mqtt = { version = "0.13.0" }
tokio = { version = "1.43.0", features = ["full"] }
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
axum = { version = "0.8.1", features = ["query", "macros"] }
mimalloc = "0.1.43"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"

[profile.release]
strip = true
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
module_name_repetitions = "allow"
similar_names = "allow"
items_after_statements = "allow"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
